examples/gateway/01-gatewayclass.yaml
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: example
spec:
  controllerName: projectcontour.io/projectcontour/contour
