examples/gateway/02-certificate_config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
